<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- String insert reference -->
    <!-- @string/name -->
    <!-- this.getString(R.string.name) -->


    <!-- Miscellaneous -->
    <string name="app_name">ShopNote</string>
    <string name="action_settings">Settings</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_done">Done</string>
    <string name="create_optional_hint">optional</string>
    <string name="synchronizing">Synchronizing...</string>

    <!-- Default activity titles -->
    <string name="title_activity_create_list">Create List</string>
    <string name="title_activity_create_item">Create Item</string>
    <string name="title_activity_view_list">View List</string>
    <string name="title_activity_share_list">Share List</string>
    <string name="title_activity_manage_friends">Friends</string>
    <string name="title_activity_create_friend">Add Friend</string>
    <string name="title_activity_item_list">Item List</string>
    <string name="title_activity_manage_recipe">Recipes</string>
    <string name="title_activity_create_recipe">Create Recipes</string>
    <string name="title_activity_archive">Archive</string>
    <string name="title_activity_view_recipe">View Recipe</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_verify_number">Setup</string>

    <!-- HomeActivity -->
    <string name="home_welcome_title">Hello!</string>
    <string name="home_welcome_message">Tap on the plus-symbol in the top right corner to add a new shopping list.</string>

    <!-- ItemListActivity -->
    <string name="item_list_welcome_message">        Tap on the plus-symbol in the top right corner to add a new item.
        After that you will see all your items here.</string>

    <!-- ManageRecipeActivity -->
    <string name="manage_recipe_welcome_message">        Recipes allow you to add multiple items to a shopping list by typing \"/recipename\".
        \n\nTap on the plus-symbol in the top right corner to create a new recipe.</string>

    <!-- CreateListActivity -->
    <string name="create_list_title">Add new shopping list</string>
    <string name="edit_list_title">Edit shopping list</string>
    <string name="create_list_name">Name:</string>
    <string name="create_list_date">Date:</string>
    <string name="create_list_shop">Shop:</string>

    <!-- CreateItemActivity -->
    <string name="create_item_title">Add new item</string>
    <string name="edit_item_title">Edit item</string>
    <string name="create_item_name">Name:</string>
    <string name="create_item_shop">Shop:</string>
    <string name="create_item_price">Price:</string>
    <string name="create_item_quantity">Quantity:</string>

    <!-- CreateRecipeActivity -->
    <string name="create_recipe_title">Add new recipe</string>
    <string name="edit_recipe_title">Edit recipe</string>
    <string name="create_recipe_name">Name:</string>

    <!-- CreateFriendActivity -->
    <string name="add_friend">Add a friend</string>
    <string name="friend_name">Name:</string>
    <string name="friend_phone_number">Phone Nr:</string>

    <!-- ViewListActivity -->
    <string name="view_list_hint">Add Item</string>
    <string name="items_bought">Shopping Cart</string>
    <string name="share">Share</string>
    <string name="menu_item_share">Share</string>

    <!-- ViewRecipeActivity -->
    <string name="view_recipe_hint">Add Item</string>
    <string name="view_recipe_title">Recipe for</string>
    <string name="view_recipe_items">Ingredients</string>
    <string name="view_recipe_notes">Notes</string>
    <string name="view_recipe_name">Recipe</string>

    <!-- ShareListActivity -->
    <string name="share_list_title">Share</string>
    <string name="share_list_hint">Add Friend</string>
    <string name="unshare">Unshare list</string>

    <!-- ManageFriendsActivity -->
    <string name="friend_has_the_app_icon">Appstatus</string>
    <string name="manage_friends_welcome_message">        Tap on the plus-symbol in the top right corner to add friends.
        After that you can share shopping lists with them.</string>
    <string name="synchStarted">"Synchronization started, this may take a few seconds"</string>
    <string name="synchFinished">Synchronization finished</string>
    <string name="friendAdded">Friend added: </string>
    <string name="noUpdates">None new friends added</string>
    <string name="checkIfFriendHasApp">Checks if the friend has the app, one moment please</string>
    <string name="inviteFriendMessage">Hey, I recommand you the ShopNote App for Android</string>
    <string name="inviteFriendSubject">Genius app you need to have!</string>

    <!-- ArchiveActivity -->
    <string name="archive_welcome_message">        The archive shows all shopping lists, which you archived before
        by using the overflow menu in the shopping list.</string>

    <!-- VerifyNumberActivity -->
    <string name="verify_number_info">In order to use synchronisation you need to verify your phone number. 
        \nShopNote will send a one time SMS to your phone. 
        (Carrier SMS charges may apply)
        \n\nDepending on your provider this may take up to 20 seconds.</string>
    <string name="verify_number_hint">Your phone number</string>
    <string name="verify_number_send">Verify</string>
    <string name="verify_number_empty">Please enter your phonenumber</string>
    <string name="verify_number_successful">Phone number verified successfully</string>
    <string name="verify_number_failed">Verification failed</string>
    <string name="verify_number_invalid">Invalid number entered</string>

    <!-- Buttons / Menu items -->
    <string name="button_back">Abort</string>
    <string name="button_save">Save</string>
    <string name="action_new">New</string>
    <string name="action_edit">Edit</string>
    <string name="action_remove">Delete</string>
    <string name="action_ok">add directly</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="action_edit_list">Edit List</string>
    <string name="action_edit_recipe">Edit Recipe</string>
    <string name="action_archive">Archive</string>
    <string name="action_notes">Notes</string>

    <!-- Error messages -->
    <string name="error_name">Please enter a name</string>
    <string name="error_missing">Not implemented yet</string>
    <string name="error_friend">Error, friend not found</string>
    <string name="error_friend_already">Error, friend already added</string>
    <string name="error_enter">Error, please enter correct data</string>
    <string name="error_duplicate_item">Can\'t add item because list already contains the same item with another unit</string>

    <!-- Synchronisation and Connection -->
    <string name="no_connection">No internet connection available</string>
    <string name="error_connection">Connection Problem occurred</string>

    <!-- The navigation drawer -->
    <string-array name="navigation_items">
        <item>Shopping Lists</item>
        <item>Item List</item>
        <item>Recipes</item>
        <item>Friends</item>
        <item>Archive</item>
        <item>Settings</item>
    </string-array>

    <!-- Options Menu -->
    <string name="title_activity_options">Settings Menu</string>
    <string name="general_settings">General Settings</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="language">Language</string>
    <string name="language_dialog">Change the language of the app</string>

    <string-array name="choosable_languages">
        <item>English</item>
        <item>Deutsch</item>
        <item>Français</item>
    </string-array>
    
    <string-array name="choosable_languages_keys">
        <item>english</item>
        <item>german</item>
        <item>french</item>
    </string-array>

    <string name="color_setting">Theme</string>
    <string name="color_dialog">Change the colors of the interface</string>
    <string name="standard">standard</string>
    <string name="title_activity_verify_numer">VerifyNumerActivity</string>
    <string name="friend_has_not_app">Your friend does not have the app</string>
    <string name="friend_is_no_shopnote_user">No ShopNote user</string>
    <string name="friend_has_not_app_text">Your friend does not have the app, do you want to send an invitation to him?</string>
    <string name="send">send</string>

    <!-- color Menu -->
    <string-array name="default_color_choice_names">
        <item>white</item>
        <item>chocolate</item>
        <item>barbie</item>
    </string-array>

    <!-- do not change the order of these items, it must be the same as in ItemUnit -->
    <string-array name="item_units">
        <item>piece</item>
        <item>gram</item>
        <item>kilogram</item>
        <item>liter</item>
    </string-array>
    <string-array name="item_units_short">
        <item>pc</item>
        <item>g</item>
        <item>kg</item>
        <item>L</item>
    </string-array>

    <string name="title_activity_invite_friend">Invite Friend</string>
    <string name="hello_world">Hello world!</string>

</resources>
