<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/action_notes"
          android:icon="@drawable/ic_action_notes"
          android:title="@string/action_notes"
          android:showAsAction="ifRoom" />
    
    <item android:id="@+id/action_share"
          android:icon="@drawable/ic_action_share"
          android:title="@string/action_share"
          android:showAsAction="ifRoom" />
        
     <item android:id="@+id/action_edit_recipe"
		  android:orderInCategory="1"
		  android:showAsAction="never"
		  android:title="@string/action_edit_recipe"/>
    
     <item android:id="@+id/action_delete"
		  android:orderInCategory="2"
		  android:showAsAction="never"
		  android:title="@string/action_remove"/>
     
         <item android:id="@+id/action_refresh"
          android:orderInCategory="3"
          android:icon="@drawable/ic_action_refresh"
          android:title="@string/action_refresh"
          android:showAsAction="never"  />

</menu>
