<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/action_refresh"
          android:icon="@drawable/ic_action_refresh"
          android:title="@string/action_refresh"
          android:showAsAction="ifRoom"  />
    
    <item android:id="@+id/action_share"
          android:icon="@drawable/ic_action_share"
          android:title="@string/action_share"
          android:showAsAction="ifRoom"  />
    
    <item android:id="@+id/action_edit_list"
		  android:orderInCategory="1"
		  android:showAsAction="never"
		  android:title="@string/action_edit_list"/>
        
    <item android:id="@+id/action_archive"
		  android:orderInCategory="2"
		  android:showAsAction="never"
		  android:title="@string/action_archive"/>
    
    <item android:id="@+id/action_3"
		  android:orderInCategory="100"
		  android:showAsAction="never"
		  android:title="@string/action_delete"/>
            
    <item android:id="@+id/action_settings"
		  android:orderInCategory="100"
		  android:showAsAction="never"
		  android:title="@string/action_settings"/>

</menu>
