<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".VerifyNumerActivity"
    style="@style/BackGroundStandardStyle" >

    <TextView
        android:id="@+id/verify_number_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/verify_number_info" />

    <EditText
        android:id="@+id/verify_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/verify_number_info"
        android:layout_below="@+id/verify_number_info"
        android:ems="10"
        android:inputType="phone" 
        android:hint="@string/verify_number_hint"/>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/verify_number_info"
        android:layout_below="@+id/verify_number"
        android:text="@string/verify_number_send" />

</RelativeLayout>
