<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".VerifyNumberActivity" >

    <TextView
        android:id="@+id/verify_number_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textSize="16sp"
        android:text="@string/verify_number_info" />

    <LinearLayout
        android:id="@+id/verify_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:layout_below="@+id/verify_number_info"
        android:orientation="horizontal" >
        
	    <EditText
	        android:id="@+id/verify_number_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.70" 
	        android:layout_marginRight="10dp"
	        android:inputType="phone" 
	        android:hint="@string/verify_number_hint" />
	
	    <Button
	        android:id="@+id/verify_number_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight="0.30" 
	        android:text="@string/verify_number_send" />
	    
	</LinearLayout>

</RelativeLayout>