<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1" 
    style="@style/BackGroundStandardStyle" >

    <LinearLayout style="?android:attr/buttonBarStyle"
        android:id="@+id/buttonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:background="@drawable/ic_button_bar" >

        <Button style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goBack"
            android:drawableLeft="@drawable/ic_action_abort"
            android:paddingLeft="50dp"
            android:gravity="left|center"
            android:text="@string/button_back" />

        <Button style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addEntryToList"
            android:drawableLeft="@drawable/ic_action_ok"
            android:paddingLeft="50dp"
            android:gravity="left|center"
            android:text="@string/button_save" />
        
   </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonBar"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" 
        style="@style/BackGroundStandardStyle" >
        

        <!-- Title -->

        <TextView
            android:id="@+id/textViewTitle"
 			android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/add_friend"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!-- Name -->
        
        <TextView
	        android:id="@+id/friend_name"
	       	android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBottom="@+id/edit_friend_name"
	        android:layout_alignLeft="@+id/textViewTitle"
	        android:text="@string/friend_name"
	        android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_friend_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textViewTitle"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="14dp"
			android:layout_toRightOf="@+id/friend_name"
            android:ems="10"
            android:inputType="textCapSentences" >
		    <requestFocus />
	   </EditText>
	    	
    
        <!-- Phone Nr -->

        <TextView
            android:id="@+id/friend_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/friend_name"
            android:layout_below="@+id/friend_name"
            android:layout_marginTop="26dp"
            android:text="@string/friend_phone_number"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        
        <EditText
            android:id="@+id/edit_friend_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/friend_phone_number"
            android:layout_alignRight="@+id/edit_friend_name"
            android:layout_marginLeft="14dp"
            android:layout_toRightOf="@+id/friend_phone_number"
            android:ems="10"
            android:inputType="phone"
    		android:digits="0123456789+" />

    </RelativeLayout>

</RelativeLayout>