<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1" 
    style="@style/BackGroundStandardStyle" >

    <LinearLayout style="?android:attr/buttonBarStyle"
        android:id="@+id/buttonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:background="@drawable/ic_button_bar" >

        <Button style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goBack"
            android:drawableLeft="@drawable/ic_action_abort"
            android:paddingLeft="50dp"
            android:gravity="left|center"
            android:text="@string/button_back" />

        <Button style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saveItem"
            android:drawableLeft="@drawable/ic_action_ok"
            android:paddingLeft="50dp"
            android:gravity="left|center"
            android:text="@string/button_save" />
        
   </LinearLayout>

   <RelativeLayout
        android:id="@+id/relativeLayoutRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/buttonBar"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" 
        style="@style/BackGroundStandardStyle" >

        <!-- Title -->
        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/create_recipe_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!-- Name of recipe -->
        <TextView
            android:id="@+id/recipeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editRecipeName"
            android:layout_alignLeft="@+id/textViewTitle"
            android:text="@string/create_recipe_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editRecipeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textViewTitle"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="14dp"
            android:layout_toRightOf="@+id/recipeName"
            android:ems="10"
            android:inputType="textCapSentences">
            <requestFocus />
        </EditText>

    </RelativeLayout>

</RelativeLayout>