<android.support.v4.widget.DrawerLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewRecipeActivity" >

	<LinearLayout
        android:id="@+id/addItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:cacheColorHint="@android:color/white"
        android:orientation="horizontal" >
        
        <AutoCompleteTextView
            android:id="@+id/editTextName"
	    	android:padding="10dp"
            android:background="@android:color/white"
         	android:cacheColorHint="@android:color/white"
            android:layout_width="0dp"          
            android:layout_height="wrap_content"
            android:layout_weight="0.70" 
			android:inputType="textCapSentences"
			android:completionThreshold="1"
			android:hint="@string/view_recipe_hint"
			android:imeOptions="actionDone"
            android:ems="10" >
        <requestFocus />
        </AutoCompleteTextView>
        
         <ImageButton
            android:id="@+id/imageButtonCreate"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:onClick="addItemEdit"
            android:src="@drawable/ic_action_new" />
        
        <ImageButton
            android:id="@+id/imageButtonAdd"
            android:contentDescription="@string/action_ok"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:onClick="addItem"
            android:src="@drawable/ic_action_ok" />

    </LinearLayout>
    
	<TextView
	    android:id="@+id/textItems"
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/addItem"
    	android:textColor="@color/gray"
    	android:layout_marginTop="15dp"
    	android:layout_marginBottom="2dp"
	    android:layout_marginLeft="5dp"
	    android:textSize="16sp" 
	    android:visibility="gone"
	    android:text="@string/view_recipe_items" >
    </TextView>

    <ListView
        android:id="@+id/ItemView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textItems"
        android:layout_marginBottom="0dp"
        android:background="@android:color/white"
        android:cacheColorHint="@android:color/white"
        android:divider="#CCCCCC"
        android:dividerHeight="1dp" >
    </ListView>
    
    <TextView
	    android:id="@+id/textNotes"
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/ItemView"
    	android:textColor="@color/gray"
    	android:layout_marginTop="15dp"
    	android:layout_marginBottom="2dp"
	    android:layout_marginLeft="5dp"
	    android:textSize="16sp" 
	    android:visibility="visible"
	    android:text="@string/view_recipe_notes" >
    </TextView>
	
    <!-- TODO: Add line background -->
    <EditText
        android:id="@+id/editTextNotes"
	    android:inputType="textMultiLine|textCapSentences"
	    android:lines="10"
	    android:minLines="3"
	    android:gravity="top|left"
	    android:maxLines="10"
	    android:layout_height="wrap_content"
	    android:layout_width="fill_parent"
	    android:scrollbars="vertical"
	    android:background="@android:color/white"
	    android:padding="10dp"
	    android:layout_marginBottom="0dp"
	    android:layout_below="@+id/textNotes" 
	    android:ems="10" >
    </EditText>

</RelativeLayout>

<!-- The navigation drawer -->
<RelativeLayout
        android:id="@+id/drawer_Linearlayout"
        android:layout_width="240dp"
        android:layout_height="fill_parent"
        android:background="@color/lightgray"
        android:layout_gravity="start">

	<ListView
        android:id="@+id/left_drawer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:choiceMode="singleChoice"
        android:divider="@color/mediumgray"
        android:dividerHeight="1dp" >
	</ListView>
      	    
 </RelativeLayout>
    
</android.support.v4.widget.DrawerLayout>
